[tool.poetry]
name = "GlennOPT"
version = "1.4.7"
description = "Multi and single objective optimization tool for cfd/computer simulations."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.6.9"
matplotlib = "^3.3.1"
numpy = "*"
pandas = "*"
psutil = "*"
pydoe = "*"
diversipy = "*"
doepy = "*" 
dataclasses_json = "*"
tqdm = "*"
torch = "*"
sklearn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
