[tool.poetry]
name = "GlennOPT"
version = "1.5.0"
description = "Multi and single objective optimization tool for cfd/computer simulations."
authors = ["Paht Juangphanich <paht.juangphanich@nasa.gov>"]

[tool.poetry.dependencies]
python = ">3.11"
matplotlib = ">3.3.2"
numpy = "*"
pandas = "*"
psutil = "*"
pydoe = "*"
diversipy = "*"
doepy = "*" 
dataclasses_json = "*"
tqdm = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.2"]
build-backend = "poetry.masonry.api"    
